hard-gists/6572592/run.log
=== Docker Run Log for 6572592 ===
Started at: Mi 29. Okt 16:37:43 CET 2025

[2025-10-29 16:37:44] START: Running container for 6572592
[2025-10-29 16:37:44] SUCCESS: Container f38e3dd4b9c129cbe335d5e8814399fbfc4192b7b75f4e8f8b2266a5488ead41 started for 6572592
=== Container logs for 6572592 ===
  File "/snippet.py", line 49
    print "Login error"
    ^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 6572592 ===
[2025-10-29 16:37:46] INFO: Container f38e3dd4b9c129cbe335d5e8814399fbfc4192b7b75f4e8f8b2266a5488ead41 has stopped
